Add register customer

--- a/ECommerceMVC/Views/Shared/_LayoutCustomer.cshtml
+++ b/ECommerceMVC/Views/Shared/_LayoutCustomer.cshtml
@@ -63,7 +63,7 @@
                         <div class="navbar-nav mx-auto">
                             <a asp-controller="Home" asp-action="Index" class="nav-item nav-link active">Trang chủ</a>
                             <a asp-controller="HangHoa" asp-action="Index" class="nav-item nav-link">Hàng hoá</a>
-                           
+                            <a asp-controller="KhachHang" asp-action="DangKy" class="nav-item nav-link">Đăng ký</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu m-0 bg-secondary rounded-0">
