--- a/ECommerceMVC/Views/Shared/_LayoutCustomer.cshtml
+++ b/ECommerceMVC/Views/Shared/_LayoutCustomer.cshtml
@@ -80,7 +80,7 @@
 							
                             @await Component.InvokeAsync("Cart")
                             
-                            <a href="#" class="my-auto">
+                            <a asp-action="DangNhap" asp-controller="KhachHang" class="my-auto" title="Đăng nhập">
                                 <i class="fas fa-user fa-2x"></i>
                             </a>
                         </div>
