--- a/ECommerceMVC/Views/Cart/Index.cshtml
+++ b/ECommerceMVC/Views/Cart/Index.cshtml
@@ -83,24 +83,24 @@
 			<div class="col-sm-8 col-md-7 col-lg-6 col-xl-4">
 				<div class="bg-light rounded">
 					<div class="p-4">
-						<h1 class="display-6 mb-4">Cart <span class="fw-normal">Total</span></h1>
+						<h1 class="display-6 mb-4">Tổng <span class="fw-normal">Giỏ hàng</span></h1>
 						<div class="d-flex justify-content-between mb-4">
 							<h5 class="mb-0 me-4">Tổng hoá đơn:</h5>
 							<p class="mb-0">$ @Model.Sum(p => p.ThanhTien)</p>
 						</div>
-						<div class="d-flex justify-content-between">
+						@* <div class="d-flex justify-content-between">
 							<h5 class="mb-0 me-4">Shipping</h5>
 							<div class="">
 								<p class="mb-0">Flat rate: $3.00</p>
 							</div>
-						</div>
-						<p class="mb-0 text-end">Shipping to Ukraine.</p>
+						</div> *@
+						@* <p class="mb-0 text-end">Shipping to Ukraine.</p> *@
 					</div>
 					<div class="py-4 mb-4 border-top border-bottom d-flex justify-content-between">
-						<h5 class="mb-0 ps-4 me-4">Total</h5>
-						<p class="mb-0 pe-4">$99.00</p>
+						<h5 class="mb-0 ps-4 me-4">Tổng tiền</h5>
+						<p class="mb-0 pe-4">$@Model.Sum(p => p.ThanhTien).ToString("#,##0.00")</p>
 					</div>
-					<button class="btn border-secondary rounded-pill px-4 py-3 text-primary text-uppercase mb-4 ms-4" type="button">Proceed Checkout</button>
+					<a class="btn border-secondary rounded-pill px-4 py-3 text-primary text-uppercase mb-4 ms-4" asp-action="Checkout" asp-controller="Cart">Thanh toán</a>
 				</div>
 			</div>
 		</div>
